--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -39,7 +39,7 @@
                 <li><a href="#!">Corsi</a></li>
                 <li class="divider" tabindex="-1"></li>
                 <li><a href="sport_bambini.html">Bambini</a></li>
-                <li><a href="#!">Adulti</a></li>
+                <li><a href="sport_adulti.html">Adulti</a></li>
               </ul>
             <li><a href="#!">News</a></li>
             <li><a href="#!">Contatti</a></li>
@@ -60,8 +60,11 @@
             <div class="wrap-content">
               <h2>Olistik Team!</h2>
               <div class="divider"></div>
-            </div>
-            <br>dolor sit amet, consectetur adipiscing elit. Suspendisse sed tempus elit. Donec placerat arcu vel tellus malesuada semper. Ut cursus, neque eget vehicula molestie, sem quam aliquet quam, ut scelerisque ex urna et orci. Integer scelerisque turpis nec dui mollis semper. Suspendisse ac tincidunt eros. Nunc interdum ultrices nisi id scelerisque.
+            </div><br>
+            L'A.S.D. Olìstik Training nasce il 18 luglio 2017 da un'idea di Marica Ferrara, Dottoressa in Scienze delle Attività Motorie e Sportive.
+            Il termine Olìstik deriva dal greco "olos" (= tutto, globalità) e in italiano "olistico" ovvero l'interezza umana, sia fisica che mentale.
+            Il progetto si dedica al TOTALE BENESSERE della persona, partendo dal bambino per permettergli il giusto percorso di crescita, fino ad arrivare all'adulto per trasmettergli i valori e i benefici che il movimento può donare!
+            Marica insieme agli altri due soci fondatori, Maria Veloci e Roberto Carrieri, crea un team di persone competenti e qualificate che si occupano di portare avanti questo sogno! <br>
         </div>
 
       </section>
@@ -118,6 +121,12 @@
         </div>
       </section> <!-- // Altre attività -->
 
+      <section class="section">
+        <div class="container center">
+          "Sii il cambiamento che vuoi vedere nel mondo!"
+        </div>
+      </section>
+
       <!-- Piè di pagina -->
       <footer class="page-footer blue lighten-5 black-text">
 
@@ -156,7 +165,7 @@
       <li class="active"><a href="#">Chi siamo</a></li>
       <li><a class="subheader" href="#!">Corsi</a></li>
         <li class="indented" class=""><a href="sport_bambini.html">Bambini</a></li>
-        <li class="indented" class=""><a href="#!">Adulti</a></li>
+        <li class="indented" class=""><a href="sport_adulti.html">Adulti</a></li>
       <li><a href="#!">News</a></li>
       <li><a href="#!">Contatti</a></li>
     </ul>
