--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="#!">Corsi</a></li>
                 <li class="divider" tabindex="-1"></li>
                 <li><a href="sport_bambini.html">Bambini</a></li>
-                <li><a href="#!">Adulti</a></li>
+                <li><a href="sport_adulti.html">Adulti</a></li>
               </ul>
             <li><a href="#!">News</a></li>
             <li><a href="#!">Contatti</a></li>
@@ -75,7 +75,7 @@
 
             <!-- Olistik per gli adulti -->
             <div class="col s12 m6">
-              <a href="#!">
+              <a href="sport_adulti.html">
                 <div class="card hoverable">
                   <div class="card-image">
                     <img src="assets/index/bambini.jpg">
@@ -174,7 +174,7 @@
       <li><a href="chi_siamo.html">Chi siamo</a></li>
       <li><a class="subheader" href="#!">Corsi</a></li>
         <li class="indented" class=""><a href="sport_bambini.html">Bambini</a></li>
-        <li class="indented" class=""><a href="#!">Adulti</a></li>
+        <li class="indented" class=""><a href="sport_adulti.html">Adulti</a></li>
       <li><a href="#!">News</a></li>
       <li><a href="#!">Contatti</a></li>
     </ul>
