--- a/sport_bambini.html
+++ b/sport_bambini.html
@@ -40,7 +40,7 @@
                 <li><a href="#!">Corsi</a></li>
                 <li class="divider" tabindex="-1"></li>
                 <li class="active"><a href="#">Bambini</a></li>
-                <li><a href="#!">Adulti</a></li>
+                <li><a href="sport_adulti.html">Adulti</a></li>
               </ul>
             <li><a href="#!">News</a></li>
             <li><a href="#!">Contatti</a></li>
@@ -62,7 +62,7 @@
               <p>
               <div class="divider"></div>
             </div><br>
-            Per i bambini di questa età il Team Olìstik propone attività ludico-sportive che mirano all'acquisizione degli schemi motori di base.
+            Per i bambini di questa età, il Team Olìstik propone attività ludico-sportive che mirano all'acquisizione degli schemi motori di base.
             Il vostro bambino imparerà a correre nel modo corretto, a saltare, a superare ostacoli, a rotolare, a lanciare ed afferrare.
             Migliorerà il suo equilibrio statico e dinamico.
             Avrà l'opportunità di entrare in contatto con nuovi attrezzi e con l'ambiente.
@@ -72,7 +72,7 @@
       </section>
 
       <!-- Multisport -->
-      <section class="section no-pad-top">
+      <section class="section">
 
         <picture>
   				<img src="assets/multisport.jpg" class="fill-view" alt="Multisport per bambini">
@@ -80,11 +80,12 @@
 
         <div class="container center-align">
           <div class="wrap-content">
-            <h2>Multisport</h2> <!--  (6-11 anni) -->
+            <h2>Multisport</h2> <!--  TODO:(6-11 anni) -->
             <div class="divider"></div>
           </div><br>
           Il Team Olìstik propone la sperimentazione di molteplici sport senza dar fretta al bambino di sceglierne uno.
           Svolgere diverse discipline sportive stimola l'acquisizione di più capacità motorie e di gesti tecnici di vario genere così da ampliare il più possibile il bagaglio motorio del bambino.
+          Inoltre potrà misurarsi con se stesso e con gli altri.
           Al momento giusto potrà scegliere la disciplina adatta a lui e capire la sua predisposizione. <br>
     		</div>
       </section>
@@ -167,6 +168,32 @@
         </div>
       </section>
 
+      <!-- Olistik Training Kids -->
+      <section class="section">
+
+        <picture>
+  				<img src="assets/multisport.jpg" class="fill-view" alt="Multisport per bambini">
+  			</picture>
+
+        <div class="container center-align">
+          <div class="wrap-content">
+            <h2>Olìstik Training Kids <span class="new badge red"></span></h2> <!--  TODO: (8+ anni) -->
+            <div class="divider"></div>
+          </div><br>
+          Per i più grandicelli, proponiamo un allenamento completo e globale.
+          Si tratta di una disciplina mirata al miglioramento delle capacità coordinative, capacità condizionali e mobilità articolare.
+          Il bambino otterrà benefici a livello psico-fisico attraverso esercizi che rinforzano gli schemi motori di base.
+          Allenerà la sua forza, la velocità, la resistenza, l'agilità, l'equilibrio, anche attraverso l'ausilio di piccoli attrezzi.
+          Svilupperà le sue capacità relazionali e la collaborazione grazie ad un ambiente dinamico e divertente. <br>
+    		</div>
+      </section>
+
+      <!-- TODO: SPORT PROPOSTI: Rugby / Atletica / Calcio / Nuoto / Basket / Pallavolo / Tennis / Ginnastica Artistica / Boxe
+                  Sono previste anche attività PSICO-EDUCATIVE
+
+                  *Tutti i nostri corsi si svolgono sia in spazi all'aperto, sia in ambienti chiusi.
+                  Il bambino avrà così sempre nuovi stimoli, svilupperà nuove conoscenze del proprio territorio ed imparerà a valorizzarlo. -->
+
       <!-- Piè di pagina -->
       <footer class="page-footer blue lighten-5 black-text">
 
@@ -205,7 +232,7 @@
       <li><a href="chi_siamo.html">Chi siamo</a></li>
       <li><a class="subheader" href="#!">Corsi</a></li>
         <li class="indented active" class=""><a href="#">Bambini</a></li>
-        <li class="indented" class=""><a href="#!">Adulti</a></li>
+        <li class="indented" class=""><a href="sport_adulti.html">Adulti</a></li>
       <li><a href="#!">News</a></li>
       <li><a href="#""">Contatti</a></li>
     </ul>
